:sparkles: CRUD loan
